# pspshrink

./: AUTHORS  ChangeLog  INSTALL  MakeRelease.sh  Makefile  Makefile.am  README  autogen.sh  ciso.cpp  ciso.h  configure.ac  license.txt  mainwindow.cpp  mainwindow.h  observer.h  pspshrink.cpp  pspshrinkgui.cpp  subject.h
data/: pspshrink.desktop  pspshrink.desktop.in
src/: ciso.cpp  ciso.h  mainwindow.cpp  pspshrink.cpp  pspshrinkgui.cpp
